--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,4 +6,8 @@
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
   <link href="/css/override.css" rel="stylesheet" type="text/css">
   {%- feed_meta -%}
+  <!-- Load custom JavaScript files set in YAML front matter -->
+  {% for js in page.customjs %}
+  <script async type="text/javascript" src="{{ js }}"></script>
+  {% endfor %}
 </head>
