--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,4 +10,6 @@
   {% for js in page.customjs %}
   <script async type="text/javascript" src="{{ js }}"></script>
   {% endfor %}
+  <!-- Load slider styles -->
+  {% include slider_styles.html %}
 </head>
