--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,7 @@
   {% for js in page.customjs %}
   <script async type="text/javascript" src="{{ js }}"></script>
   {% endfor %}
-  <!-- Load slider styles -->
+  <!-- Load slider styles and scripts -->
   {% include slider_styles.html %}
+  {% include slider_scripts.html %}
 </head>
